--- a/example.html
+++ b/example.html
@@ -122,7 +122,7 @@
 
     <script src="dist/butr.js"></script>
     <script>
-      butr.Marker({useTo: true});
+      Butr.marker({ useTo: true });
     </script>
   </body>
 </html>
