--- a/example/index.html
+++ b/example/index.html
@@ -6,10 +6,82 @@
   <title>Hello, Butr!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css">
+  <style>
+    main {
+      max-width: 480px;
+    }
+  </style>
 </head>
 
 <body>
-  <p>Meow</p>
+  <div>
+    <main>
+      <h1>Hello, Butr</h1>
+
+      <h2>Heading 1</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+
+      <h3>Heading 1.1</h3>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+
+      <h2>Heading 2</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+
+      <h3>Heading 2.1</h3>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+
+      <h2>Heading 3</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+
+      <h3>Heading 3.1</h3>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+      </p>
+    </main>
+
+    <aside>
+      Sidebar
+    </aside>
+  </div>
 
   <script src="/butr.js"></script>
   <script>
