--- a/example/index.html
+++ b/example/index.html
@@ -7,22 +7,77 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    }
+
+    .wrapper {
+      max-width: 1024px;
+      margin: 128px auto 24px auto;
+      display: flex;
+    }
+
     main {
-      max-width: 480px;
+      flex-grow: 1;
+      font-size: 1.35em;
+      line-height: 1.4;
+      margin-bottom: 600px;
+      padding: 0 24px;
+    }
+
+    aside {
+      flex-shrink: 0;
+      width: 320px;
+      padding: 0 24px;
+      border-left: 1px solid lightgray;
+      align-self: flex-start;
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    .SidebarNav > .SidebarNav__List {
+      padding: 0;
+    }
+
+    .SidebarNav__List {
+      list-style-type: none;
+      padding-left: 16px;
+      margin: 0;
+    }
+
+    .SidebarNav__Item {
+      margin-top: 4px;
+      margin-bottom: 4px;
+    }
+
+    .Annoying {
+      background-color: #d34510;
+      color: white;
+      font-weight: bold;
+      padding: 24px;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
     }
   </style>
 </head>
 
 <body>
-  <div>
-    <main>
+  <div class="Annoying">
+    <p>I'm an annoying info or nav bar that will require an offset!</p>
+  </div>
+  <div class="wrapper">
+    <main class="MainContent js-butr-content">
       <h1>Hello, Butr</h1>
 
       <h2>Heading 1</h2>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. <a data-butr href="#heading-2">Go to heading 2</a>. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
       </p>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
@@ -79,7 +134,9 @@
     </main>
 
     <aside>
-      Sidebar
+      <h2>Sidebar Nav</h2>
+      <nav class="SidebarNav js-butr-nav">
+      </nav>
     </aside>
   </div>
 
@@ -87,15 +144,18 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       Butr.init({
-        to: true,
-        marker: true,
-        threshold: 80,
-        markerClass: 'TOC__Marker',
-        activeClass: 'TOC__Item--active',
+        To: false,
+        Marker: false,
+        AutoAnchors: true,
+        AutoSidebar: true,
+        StickyNav: false,
+        threshold: 126,
+        markerClass: 'SidebarNav__Marker',
+        activeClass: 'SidebarNav__Item--active',
         distanceTop: '129px',
-        olClass: 'list-reset m-0',
-        liClass: 'nav-item',
-        aClass: 'nav-link Sidebar__Link'
+        olClass: 'SidebarNav__List',
+        liClass: 'SidebarNav__Item',
+        aClass: 'SidebarNav__Link'
       })
     })
   </script>
