--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <style>
+
+    * { box-sizing: border-box; }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
@@ -29,13 +32,9 @@
 
     aside {
       flex-shrink: 0;
-      width: 320px;
-      padding: 0 24px;
-      border-left: 1px solid lightgray;
-      align-self: flex-start;
-
-      position: fixed;
-      right: 0;
+      width: 240px;
+      position: relative;
+      padding-top: 102px;
     }
 
     h1 {
@@ -44,6 +43,12 @@
 
     .SidebarNav {
       position: relative;
+      padding: 0 24px;
+      border-left: 1px solid lightgray;
+    }
+
+    .SidebarNav h2 {
+      margin-top: 0;
     }
 
     .SidebarNav > .Butr__Sidebar__List {
@@ -68,7 +73,7 @@
     .Butr__Marker {
       background-color: #d34510;
       position: absolute;
-      left: -26px;
+      left: -2px;
       top: 0;
       height: 24px;
       width: 3px;
@@ -83,6 +88,7 @@
       position: fixed;
       top: 0;
       width: 100%;
+      z-index: 100;
     }
 
     footer {
@@ -123,7 +129,7 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
       </p>
 
-      <h3>Heading 1.1</h3>
+      <h3>Heading 1.1 is really long and dumb and can't fit in the sidebar</h3>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ad officia fugit aut eius consectetur cum nesciunt qui eligendi dolor? Fuga, aliquid? Obcaecati ipsam perferendis rerum labore eveniet quos ab!
       </p>
@@ -206,13 +212,13 @@
     </main>
 
     <aside>
-      <h2>Sidebar Nav</h2>
       <nav class="SidebarNav js-butr-nav">
+        <h2>Sidebar Nav</h2>
       </nav>
     </aside>
   </div>
 
-  <footer>
+  <footer class="Footer">
     Big Ole Footer
   </footer>
 
@@ -224,9 +230,13 @@
         Marker: true,
         AutoAnchors: true,
         AutoSidebar: true,
-        StickyNav: false,
+        StickyNav: true,
         scrollOffset: 126,
-        distanceTop: '129px',
+        distanceTop: 0,
+        topBuffer: 30,
+        avoid: '.Footer',
+        avoidBuffer: 24,
+        mediaQuery: '(min-width: 1200px)'
       })
     })
   </script>
