--- a/example/index.html
+++ b/example/index.html
@@ -223,8 +223,9 @@
   </footer>
 
   <script src="/butr.js"></script>
+  <!-- Do not change this to an arrow function, the example needs to work in IE11  -->
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('DOMContentLoaded', function () {
       Butr.init({
         To: false,
         Marker: true,
