fix build system and example

--- a/example/index.html
+++ b/example/index.html
@@ -222,8 +222,13 @@
     Big Ole Footer
   </footer>
 
+<!--
+  Uncomment to use ES Module instead of window Object
+  make sure to comment out the below script too though!
+-->
+<!--  <script src="/bundle.js"></script>-->
+
   <script src="/butr.js"></script>
-  <!-- Do not change this to an arrow function, the example needs to work in IE11  -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       Butr.init({
