well that felt good

--- a/example/index.html
+++ b/example/index.html
@@ -242,7 +242,7 @@
   Uncomment to use ES Module instead of window Object
   make sure to comment out the below script too though!
 -->
-<!--  <script src="/bundle.js"></script>-->
+<!--<script type="module" src="/butr.es.js"></script>-->
 
   <script src="/butr.js"></script>
   <script>
@@ -253,7 +253,7 @@
         AutoSidebar: true,
         StickyNav: true,
         scrollOffset: 128,
-        mediaQuery: '(min-width: 1200px)'
+        mediaQuery: '(min-width: 1024px)'
       })
     })
   </script>
